default/objects/E2E_Data_Offer_Item__c/E2E_Data_Offer_Item__c.object-meta.xml
<CustomObject>
    <label>E2E Data Offer Item</label>
    <nameField>
        <displayFormat>OI-{0000000}</displayFormat>
        <label>E2E Data Offer Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E2E Data Offer Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>