default/objects/E2E_Data_Offer_Item__c/fields/Activate_EV_Charging__c.field-meta.xml
<CustomField>
    <fullName>Activate_EV_Charging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate EV Charging</label>
    <type>Checkbox</type>
</CustomField>