default/objects/E2E_Data_Offer_Item__c/fields/Category_Of_Products__c.field-meta.xml
<CustomField>
    <fullName>Category_Of_Products__c</fullName>
    <label>Category Of Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 Diesel, tunnel-, highway- and ferry toll fees</fullName>
            </value>
            <value>
                <fullName>1 All fuels, tunnel-, highway- and ferry toll fees</fullName>
            </value>
            <value>
                <fullName>2 Category 1 plus vehicle-related goods and services (oils, car wash)</fullName>
            </value>
            <value>
                <fullName>Lotos All Products</fullName>
            </value>
            <value>
                <fullName>Lotos Diesel</fullName>
            </value>
            <value>
                <fullName>Lotos All Fuel</fullName>
            </value>
            <value>
                <fullName>Group 00</fullName>
            </value>
            <value>
                <fullName>Group 01</fullName>
            </value>
            <value>
                <fullName>Group 02</fullName>
            </value>
            <value>
                <fullName>Group 03</fullName>
            </value>
            <value>
                <fullName>Group 04</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>