default/objects/E2E_Data_Offer_Item__c/fields/Daily_Card_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Card_Limit__c</fullName>
    <label>Daily Card Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>