default/objects/E2E_Data_Offer_Item__c/fields/Fleetcor_Offer_Item__c.field-meta.xml
<CustomField>
    <fullName>Fleetcor_Offer_Item__c</fullName>
    <label>Fleetcor Offer Item</label>
    <length>18</length>
    <type>Text</type>
</CustomField>