default/objects/E2E_Data_Offer_Item__c/fields/License_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_Number__c</fullName>
    <label>License Plate Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>