default/objects/E2E_Data_Offer_Item__c/fields/Locked_Pin_Change__c.field-meta.xml
<CustomField>
    <fullName>Locked_Pin_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked Pin Change</label>
    <type>Checkbox</type>
</CustomField>