default/objects/E2E_Data_Offer_Item__c/fields/Mileage_Data__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mileage Data</label>
    <type>Checkbox</type>
</CustomField>