default/objects/E2E_Data_Offer_Item__c/fields/Monthly_Fuel_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fuel_Consumption__c</fullName>
    <label>Monthly Fuel Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>