default/objects/E2E_Data_Offer_Item__c/fields/Offer_Item_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Offer_Item_Type_Id__c</fullName>
    <label>Offer Item Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>