default/objects/E2E_Data_Offer_Item__c/fields/Offer_Item_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Offer_Item_Type_Name__c</fullName>
    <label>Offer Item Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>