default/objects/E2E_Data_Offer_Item__c/fields/Type_Of_Card__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Card__c</fullName>
    <label>Type Of Card</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Network Card -- International</fullName>
            </value>
            <value>
                <fullName>Multi Network Card -- International</fullName>
            </value>
            <value>
                <fullName>Single Network Card -- National</fullName>
            </value>
            <value>
                <fullName>Multi Network Card -- National</fullName>
            </value>
            <value>
                <fullName>Lotos Biznes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>