default/objects/E2E_Data_Offer_Item__c/fields/Type_Of_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Vehicle__c</fullName>
    <label>Type Of Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PKW</fullName>
            </value>
            <value>
                <fullName>LKW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>